==> ghi-electronics/TinyCLR-Ports/Targets/STM32F7xx/STM32F7_GPIO.cpp <==
#include "STM32F7.h"
#define STM32F7_Gpio_DebounceDefaultMilisecond     20
#define STM32F7_Gpio_MaxInt                     16
#define STM32F7_Gpio_PinReserved                 1
#define STM32F7_GPIO_DEFAULT_CONTROLLER 0
#define Port(port) ((GPIO_TypeDef *) (GPIOA_BASE + (port << 10)))

const TinyCLR_Api_Info* STM32F7_Gpio_GetApi() {
    gpioProvider.Parent = &gpioApi;

    gpioProvider.Acquire = &STM32F7_Gpio_Acquire;
    gpioProvider.Release = &STM32F7_Gpio_Release;
    gpioProvider.AcquirePin = &STM32F7_Gpio_AcquirePin;
    gpioProvider.ReleasePin = &STM32F7_Gpio_ReleasePin;
    gpioProvider.Read = &STM32F7_Gpio_Read;
    gpioProvider.Write = &STM32F7_Gpio_Write;
    gpioProvider.IsDriveModeSupported = &STM32F7_Gpio_IsDriveModeSupported;
    gpioProvider.GetDriveMode = &STM32F7_Gpio_GetDriveMode;
    gpioProvider.SetDriveMode = &STM32F7_Gpio_SetDriveMode;
    gpioProvider.GetDebounceTimeout = &STM32F7_Gpio_GetDebounceTimeout;
    gpioProvider.SetDebounceTimeout = &STM32F7_Gpio_SetDebounceTimeout;
    gpioProvider.SetValueChangedHandler = &STM32F7_Gpio_SetValueChangedHandler;
    gpioProvider.GetPinCount = &STM32F7_Gpio_GetPinCount;

    gpioApi.Author = "GHI Electronics, LLC";
    gpioApi.Name = "GHIElectronics.TinyCLR.NativeApis.STM32F7.GpioProvider";
    gpioApi.Type = TinyCLR_Api_Type::GpioProvider;
    gpioApi.Version = 0;
    gpioApi.Implementation = &gpioProvider;

    return &gpioApi;
}

TinyCLR_Result STM32F7_Gpio_SetValueChangedHandler(const TinyCLR_Gpio_Provider* self, int32_t controller, int32_t pin, TinyCLR_Gpio_ValueChangedHandler isr) {
    uint32_t num = pin & 0x0F;
    uint32_t bit = 1 << num;
    uint32_t shift = (num & 0x3) << 2; // 4 bit fields
    uint32_t idx = num >> 2;
    uint32_t mask = 0xF << shift;
    uint32_t config = (pin >> 4) << shift; // port number configuration

    STM32F7_Int_State* state = &g_int_state[num];

    DISABLE_INTERRUPTS_SCOPED(irq);

    if (isr) {
        if ((SYSCFG->EXTICR[idx] & mask) != config) {
            if (EXTI->IMR & bit)
                return TinyCLR_Result::SharingViolation; // interrupt in use

            SYSCFG->EXTICR[idx] = SYSCFG->EXTICR[idx] & ~mask | config;
        }
        state->provider = &gpioProvider;
        state->pin = (uint8_t)pin;
        state->debounce = STM32F7_Gpio_GetDebounceTimeout(self, controller, pin);
        state->ISR = isr;
        state->lastDebounceTicks = STM32F7_Time_GetTimeForProcessorTicks(nullptr, STM32F7_Time_GetCurrentProcessorTicks(nullptr));

        EXTI->RTSR &= ~bit;
        EXTI->FTSR &= ~bit;

        EXTI->FTSR |= bit;
        EXTI->RTSR |= bit;

        do {
            EXTI->PR = bit; // remove pending interrupt
        } while (EXTI->PR & bit); // repeat if pending again

        EXTI->IMR |= bit; // enable interrupt
    }
    else if ((SYSCFG->EXTICR[idx] & mask) == config) {
        EXTI->IMR &= ~bit; // disable interrupt
        state->ISR = 0;
    }
    return TinyCLR_Result::Success;
}

TinyCLR_Result STM32F7_Gpio_Read(const TinyCLR_Gpio_Provider* self, int32_t controller, int32_t pin, TinyCLR_Gpio_PinValue& value) {
    if (pin >= STM32F7_Gpio_MaxPins || pin == PIN_NONE)
        return TinyCLR_Result::ArgumentOutOfRange;

    value = STM32F7_GpioInternal_ReadPin(pin) ? TinyCLR_Gpio_PinValue::High : TinyCLR_Gpio_PinValue::Low;

    return TinyCLR_Result::Success;
}

TinyCLR_Result STM32F7_Gpio_Write(const TinyCLR_Gpio_Provider* self, int32_t controller, int32_t pin, TinyCLR_Gpio_PinValue value) {
    if (pin >= STM32F7_Gpio_MaxPins || pin == PIN_NONE)
        return TinyCLR_Result::ArgumentOutOfRange;

    STM32F7_GpioInternal_WritePin(pin, value == TinyCLR_Gpio_PinValue::High ? true : false);

    return TinyCLR_Result::Success;
}

TinyCLR_Result STM32F7_Gpio_AcquirePin(const TinyCLR_Gpio_Provider* self, int32_t controller, int32_t pin) {
    DISABLE_INTERRUPTS_SCOPED(irq);

    if (pin >= STM32F7_Gpio_MaxPins || pin == PIN_NONE)
        return TinyCLR_Result::ArgumentOutOfRange;

    if (g_pinReserved[pin] == STM32F7_Gpio_PinReserved) {
        return TinyCLR_Result::SharingViolation;
    }

    if (STM32F7_GpioInternal_OpenPin(pin))
        return TinyCLR_Result::Success;

    return TinyCLR_Result::NotAvailable;
}

TinyCLR_Result STM32F7_Gpio_ReleasePin(const TinyCLR_Gpio_Provider* self, int32_t controller, int32_t pin) {

    DISABLE_INTERRUPTS_SCOPED(irq);

    if (pin >= STM32F7_Gpio_MaxPins || pin == PIN_NONE)
        return TinyCLR_Result::ArgumentOutOfRange;

    STM32F7_GpioInternal_ClosePin(pin);

    return TinyCLR_Result::Success;

}

TinyCLR_Result STM32F7_Gpio_SetDriveMode(const TinyCLR_Gpio_Provider* self, int32_t controller, int32_t pin, TinyCLR_Gpio_PinDriveMode driveMode) {
    if (pin >= STM32F7_Gpio_MaxPins || pin == PIN_NONE)
        return TinyCLR_Result::ArgumentOutOfRange;

    switch (driveMode) {
    case TinyCLR_Gpio_PinDriveMode::Output:
        STM32F7_GpioInternal_ConfigurePin(pin, STM32F7_Gpio_PortMode::GeneralPurposeOutput, STM32F7_Gpio_OutputType::PushPull, STM32F7_Gpio_OutputSpeed::VeryHigh, STM32F7_Gpio_PullDirection::None, STM32F7_Gpio_AlternateFunction::AF0);
        break;

    case TinyCLR_Gpio_PinDriveMode::Input:
        STM32F7_GpioInternal_ConfigurePin(pin, STM32F7_Gpio_PortMode::Input, STM32F7_Gpio_OutputType::PushPull, STM32F7_Gpio_OutputSpeed::VeryHigh, STM32F7_Gpio_PullDirection::None, STM32F7_Gpio_AlternateFunction::AF0);
        break;

    case TinyCLR_Gpio_PinDriveMode::InputPullUp:
        STM32F7_GpioInternal_ConfigurePin(pin, STM32F7_Gpio_PortMode::Input, STM32F7_Gpio_OutputType::PushPull, STM32F7_Gpio_OutputSpeed::VeryHigh, STM32F7_Gpio_PullDirection::PullUp, STM32F7_Gpio_AlternateFunction::AF0);
        break;

    case TinyCLR_Gpio_PinDriveMode::InputPullDown:
        STM32F7_GpioInternal_ConfigurePin(pin, STM32F7_Gpio_PortMode::Input, STM32F7_Gpio_OutputType::PushPull, STM32F7_Gpio_OutputSpeed::VeryHigh, STM32F7_Gpio_PullDirection::PullDown, STM32F7_Gpio_AlternateFunction::AF0);
        break;

    case TinyCLR_Gpio_PinDriveMode::OutputOpenDrain:
        STM32F7_GpioInternal_ConfigurePin(pin, STM32F7_Gpio_PortMode::GeneralPurposeOutput, STM32F7_Gpio_OutputType::OpenDrain, STM32F7_Gpio_OutputSpeed::VeryHigh, STM32F7_Gpio_PullDirection::None, STM32F7_Gpio_AlternateFunction::AF0);
        break;

    case TinyCLR_Gpio_PinDriveMode::OutputOpenDrainPullUp:
        STM32F7_GpioInternal_ConfigurePin(pin, STM32F7_Gpio_PortMode::GeneralPurposeOutput, STM32F7_Gpio_OutputType::PushPull, STM32F7_Gpio_OutputSpeed::VeryHigh, STM32F7_Gpio_PullDirection::PullUp, STM32F7_Gpio_AlternateFunction::AF0);
        break;

    case TinyCLR_Gpio_PinDriveMode::OutputOpenSource:
    case TinyCLR_Gpio_PinDriveMode::OutputOpenSourcePullDown:
    default:
        return TinyCLR_Result::NotSupported;
    }

    g_pinDriveMode[pin] = driveMode;

    return TinyCLR_Result::Success;
}

TinyCLR_Result STM32F7_Gpio_SetDebounceTimeout(const TinyCLR_Gpio_Provider* self, int32_t controller, int32_t pin, uint64_t debounceTicks) {
    g_debounceTicksPin[pin] = debounceTicks;

    return TinyCLR_Result::Success;
}

int32_t STM32F7_Gpio_GetPinCount(const TinyCLR_Gpio_Provider* self, int32_t controller) {
    return STM32F7_Gpio_MaxPins;
}

void STM32F7_Gpio_Reset() {

    for (int i = 0; i < STM32F7_Gpio_MaxPins; i++) {
        auto& p = g_stm32f7_pins[i];

        g_pinReserved[i] = 0;

        auto gpioController = 0; //TODO Temporary set to 0

        STM32F7_Gpio_SetDebounceTimeout(nullptr, gpioController, i, STM32F7_Gpio_DebounceDefaultMilisecond);
        STM32F7_Gpio_DisableInterrupt(i);

        if (p.apply) {
            STM32F7_GpioInternal_ConfigurePin(i, p.portMode, p.outputType, p.outputSpeed, p.pullDirection, p.alternateFunction);

            if (p.portMode == STM32F7_Gpio_PortMode::GeneralPurposeOutput)
                STM32F7_GpioInternal_WritePin(i, p.outputDirection);
        }
    }

    EXTI->IMR = 0; // disable all external interrups;
    STM32F7_InterruptInternal_Activate(EXTI0_IRQn, (uint32_t*)&STM32F7_Gpio_Interrupt0, 0);
    STM32F7_InterruptInternal_Activate(EXTI1_IRQn, (uint32_t*)&STM32F7_Gpio_Interrupt1, 0);
    STM32F7_InterruptInternal_Activate(EXTI2_IRQn, (uint32_t*)&STM32F7_Gpio_Interrupt2, 0);
    STM32F7_InterruptInternal_Activate(EXTI3_IRQn, (uint32_t*)&STM32F7_Gpio_Interrupt3, 0);
    STM32F7_InterruptInternal_Activate(EXTI4_IRQn, (uint32_t*)&STM32F7_Gpio_Interrupt4, 0);
    STM32F7_InterruptInternal_Activate(EXTI9_5_IRQn, (uint32_t*)&STM32F7_Gpio_Interrupt5, 0);
    STM32F7_InterruptInternal_Activate(EXTI15_10_IRQn, (uint32_t*)&STM32F7_Gpio_Interrupt10, 0);
}
