==> ghi-electronics/TinyCLR-Ports/Targets/LPC17/LPC17_GPIO.cpp <==
#include "LPC17.h"
#define GET_PORT(x)                     (x / 32)
#define GET_PIN(x)                      (x % 32)
#define GET_PIN_MASK(x)                 (1<<(x % 32))
#define IOCON_BASE                  ((uint32_t*)0x4002C000)
#define FIODIR(x)                   ((uint32_t*)(0x20098000 + (0x20 * GET_PORT(x))))
#define FIOSET(x)                   ((uint32_t*)(0x20098018 + (0x20 * GET_PORT(x))))
#define FIOCLR(x)                   ((uint32_t*)(0x2009801C + (0x20 * GET_PORT(x))))
#define FIOPIN(x)                   ((uint32_t*)(0x20098014 + (0x20 * GET_PORT(x))))
#define GPIO_INT_RisingEdge(port)               ((uint32_t*)(0X40028090 + (0x10 * port)))
#define GPIO_INT_FallingEdge(port)              ((uint32_t*)(0X40028094 + (0x10 * port)))
#define GPIO_INT_RisingEdge_Status(port)        ((uint32_t*)(0X40028084 + (0x10 * port)))
#define GPIO_INT_FallingEdge_Status(port)       ((uint32_t*)(0X40028088 + (0x10 * port)))
#define GPIO_INT_Clear(port)                    ((uint32_t*)(0X4002808C + (0x10 * port)))
#define GPIO_INT_Overall_IO_Status              ((uint32_t*)0x40028080)
#define LPC17_Gpio_PinReserved                 1
#define LPC17_Gpio_DebounceDefaultMilisecond   20
#define LPC17_Gpio_MaxPins                     SIZEOF_ARRAY(pins)

const TinyCLR_Api_Info* LPC17_Gpio_GetApi() {
    gpioProvider.Parent = &gpioApi;
    gpioProvider.Index = 0;
    gpioProvider.Acquire = &LPC17_Gpio_Acquire;
    gpioProvider.Release = &LPC17_Gpio_Release;
    gpioProvider.AcquirePin = &LPC17_Gpio_AcquirePin;
    gpioProvider.ReleasePin = &LPC17_Gpio_ReleasePin;
    gpioProvider.IsDriveModeSupported = &LPC17_Gpio_IsDriveModeSupported;
    gpioProvider.Read = &LPC17_Gpio_Read;
    gpioProvider.Write = &LPC17_Gpio_Write;
    gpioProvider.GetDriveMode = &LPC17_Gpio_GetDriveMode;
    gpioProvider.SetDriveMode = &LPC17_Gpio_SetDriveMode;
    gpioProvider.GetDebounceTimeout = &LPC17_Gpio_GetDebounceTimeout;
    gpioProvider.SetDebounceTimeout = &LPC17_Gpio_SetDebounceTimeout;
    gpioProvider.SetValueChangedHandler = &LPC17_Gpio_SetValueChangedHandler;
    gpioProvider.GetPinCount = &LPC17_Gpio_GetPinCount;

    gpioApi.Author = "GHI Electronics, LLC";
    gpioApi.Name = "GHIElectronics.TinyCLR.NativeApis.LPC17.GpioProvider";
    gpioApi.Type = TinyCLR_Api_Type::GpioProvider;
    gpioApi.Version = 0;
    gpioApi.Count = 1;
    gpioApi.Implementation = &gpioProvider;

    return &gpioApi;
}

TinyCLR_Result LPC17_Gpio_SetValueChangedHandler(const TinyCLR_Gpio_Provider* self, int32_t pin, TinyCLR_Gpio_ValueChangedHandler ISR) {
    LPC17_Int_State* state = &g_int_state[pin];

    DISABLE_INTERRUPTS_SCOPED(irq);

    uint32_t port = GET_PORT(pin);
    uint32_t pinMask = GET_PIN_MASK(pin);
    uint32_t* FIODIR_Register = FIODIR(pin);

    uint32_t* GPIO_Port_X_Interrupt_RisingEdgeRegister = GPIO_INT_RisingEdge(port);
    uint32_t* GPIO_Port_X_Interrupt_FallingEdgeRegister = GPIO_INT_FallingEdge(port);

    if (ISR && ((port != 0) && (port != 2))) // If interrupt is called on a non interrupt capable pin return false
        return TinyCLR_Result::ArgumentInvalid;

    LPC17_Gpio_EnableInputPin(pin, g_pinDriveMode[pin]);

    if (ISR) {
        state->controller = &gpioProvider;
        state->pin = (uint8_t)pin;
        state->debounce = LPC17_Gpio_GetDebounceTimeout(self, pin);
        state->ISR = ISR;
        state->lastDebounceTicks = LPC17_Time_GetCurrentTicks(nullptr);

        *GPIO_Port_X_Interrupt_RisingEdgeRegister |= pinMask;
        *GPIO_Port_X_Interrupt_FallingEdgeRegister |= pinMask;

        LPC17_Interrupt_Activate(GPIO_IRQn, (uint32_t*)&LPC17_Gpio_InterruptHandler, 0);
        LPC17_Interrupt_Enable(GPIO_IRQn);
    }
    else {
        LPC17_Interrupt_Disable(GPIO_IRQn);
    }

    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC17_Gpio_Read(const TinyCLR_Gpio_Provider* self, int32_t pin, TinyCLR_Gpio_PinValue& value) {
    if (pin >= LPC17_Gpio_MaxPins || pin < 0)
        return TinyCLR_Result::ArgumentOutOfRange;

    if (LPC17_Gpio_ReadPin(pin))
        value = TinyCLR_Gpio_PinValue::High;
    else
        value = TinyCLR_Gpio_PinValue::Low;

    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC17_Gpio_Write(const TinyCLR_Gpio_Provider* self, int32_t pin, TinyCLR_Gpio_PinValue value) {
    if (pin >= LPC17_Gpio_MaxPins || pin < 0)
        return TinyCLR_Result::ArgumentOutOfRange;

    if (value == TinyCLR_Gpio_PinValue::High)
        LPC17_Gpio_WritePin(pin, true);
    else
        LPC17_Gpio_WritePin(pin, false);

    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC17_Gpio_AcquirePin(const TinyCLR_Gpio_Provider* self, int32_t pin) {
    if (pin >= LPC17_Gpio_MaxPins || pin < 0)
        return TinyCLR_Result::ArgumentOutOfRange;

    if (!LPC17_Gpio_OpenPin(pin))
        return TinyCLR_Result::SharingViolation;

    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC17_Gpio_ReleasePin(const TinyCLR_Gpio_Provider* self, int32_t pin) {
    if (pin >= LPC17_Gpio_MaxPins || pin < 0)
        return TinyCLR_Result::ArgumentOutOfRange;

    LPC17_Gpio_ClosePin(pin);

    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC17_Gpio_SetDriveMode(const TinyCLR_Gpio_Provider* self, int32_t pin, TinyCLR_Gpio_PinDriveMode driveMode) {
    if (pin >= LPC17_Gpio_MaxPins || pin < 0)
        return TinyCLR_Result::ArgumentOutOfRange;

    switch (driveMode) {
    case TinyCLR_Gpio_PinDriveMode::Output:
        LPC17_Gpio_ConfigurePin(pin, LPC17_Gpio_Direction::Output, LPC17_Gpio_PinFunction::PinFunction0, LPC17_Gpio_ResistorMode::Inactive, LPC17_Gpio_Hysteresis::Disable, LPC17_Gpio_InputPolarity::NotInverted, LPC17_Gpio_SlewRate::StandardMode, LPC17_Gpio_OutputType::PushPull);
        break;

    case TinyCLR_Gpio_PinDriveMode::Input:
        LPC17_Gpio_ConfigurePin(pin, LPC17_Gpio_Direction::Input, LPC17_Gpio_PinFunction::PinFunction0, LPC17_Gpio_ResistorMode::Inactive, LPC17_Gpio_Hysteresis::Disable, LPC17_Gpio_InputPolarity::NotInverted, LPC17_Gpio_SlewRate::StandardMode, LPC17_Gpio_OutputType::PushPull);
        break;

    case TinyCLR_Gpio_PinDriveMode::InputPullUp:
        LPC17_Gpio_ConfigurePin(pin, LPC17_Gpio_Direction::Input, LPC17_Gpio_PinFunction::PinFunction0, LPC17_Gpio_ResistorMode::PullUp, LPC17_Gpio_Hysteresis::Disable, LPC17_Gpio_InputPolarity::NotInverted, LPC17_Gpio_SlewRate::StandardMode, LPC17_Gpio_OutputType::PushPull);
        break;

    case TinyCLR_Gpio_PinDriveMode::InputPullDown:
        LPC17_Gpio_ConfigurePin(pin, LPC17_Gpio_Direction::Input, LPC17_Gpio_PinFunction::PinFunction0, LPC17_Gpio_ResistorMode::PullDown, LPC17_Gpio_Hysteresis::Disable, LPC17_Gpio_InputPolarity::NotInverted, LPC17_Gpio_SlewRate::StandardMode, LPC17_Gpio_OutputType::PushPull);
        break;

    case TinyCLR_Gpio_PinDriveMode::OutputOpenDrain:
    case TinyCLR_Gpio_PinDriveMode::OutputOpenDrainPullUp:
    case TinyCLR_Gpio_PinDriveMode::OutputOpenSource:
    case TinyCLR_Gpio_PinDriveMode::OutputOpenSourcePullDown:
    default:
        return  TinyCLR_Result::NotSupported;
    }

    g_pinDriveMode[pin] = driveMode;

    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC17_Gpio_SetDebounceTimeout(const TinyCLR_Gpio_Provider* self, int32_t pin, int32_t debounceTime) {
    if (pin >= LPC17_Gpio_MaxPins || pin < 0)
        return TinyCLR_Result::ArgumentOutOfRange;

    if (debounceTime > 0 && debounceTime < 10000) {
        g_debounceTicksPin[pin] = (uint32_t)LPC17_Time_GetProcessorTicksForTime(nullptr, (uint64_t)debounceTime * 1000 * 10);
        return TinyCLR_Result::Success;
    }

    return TinyCLR_Result::WrongType;
}

int32_t LPC17_Gpio_GetPinCount(const TinyCLR_Gpio_Provider* self) {
    return LPC17_Gpio_MaxPins;
}

void LPC17_Gpio_Reset() {

    uint32_t* GPIO_Port_0_INT_RisingEdge_Register = GPIO_INT_RisingEdge(0);
    uint32_t* GPIO_Port_0_INT_FallingEdge_Register = GPIO_INT_FallingEdge(0);
    uint32_t* GPIO_Port_2_INT_RisingEdge_Register = GPIO_INT_RisingEdge(2);
    uint32_t* GPIO_Port_2_INT_FallingEdge_Register = GPIO_INT_FallingEdge(2);

    for (auto pin = 0; pin < LPC17_Gpio_GetPinCount(&gpioProvider); pin++) {
        g_pinReserved[pin] = 0;
        LPC17_Gpio_SetDebounceTimeout(&gpioProvider, pin, LPC17_Gpio_DebounceDefaultMilisecond);
    }

    *GPIO_Port_0_INT_RisingEdge_Register = 0x0;
    *GPIO_Port_0_INT_FallingEdge_Register = 0x0;
    *GPIO_Port_2_INT_RisingEdge_Register = 0x0;
    *GPIO_Port_2_INT_FallingEdge_Register = 0x0;
}
